attempting to fix up second slider, checking master branch because the second slider was working without weird padding there except when on mobile devices

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -149,7 +149,7 @@ html *{
 
 #portfolio{
 	padding-top: 6%;
-	padding-bottom: 12%;
+	// padding-bottom: 12%;
 
 }
 
